# viar

./: Cargo.toml  README.md
crates/argos-rs/: Cargo.toml  README.md
crates/argos-rs/src/: command.rs  error.rs  lib.rs  protocol.rs  types.rs
crates/qmk-rs/: Cargo.toml
crates/qmk-rs/src/: lib.rs  settings.rs
crates/via-protocol/: README.md
crates/via-protocol/src/: basic_key.rs  command.rs  encoding.rs  key_action.rs  keycode_groups.rs  keycode_macros.rs  keycodes.rs  layout.rs  lib.rs  magic_key.rs  mod_mask.rs  protocol.rs  qmk_names.rs  quantum_key.rs  rgb_key.rs  swap_hands_key.rs  tap_dance_key.rs
crates/viar/: Cargo.toml
crates/viar/src/: app.rs  theme.rs  util.rs
crates/viar/src/types/: common.rs  dynamic.rs  keymap.rs  lighting.rs  mod.rs  qmk_settings.rs  state.rs
crates/viar/src/ui/: about_tab.rs  combos_tab.rs  connected.rs  key_overrides_tab.rs  keycode_builder.rs  keymap_edit.rs  keymap_io.rs  keymap_tab.rs  layer_picker.rs  lighting_tab.rs  menu.rs  mod.rs  pointing_tab.rs  qmk_settings_tab.rs  quantum_tab.rs  screens.rs  settings_tab.rs  tap_dance_tab.rs
