[package]
name = "viar"
version = "0.0.0-alpha"
edition = "2024"

[dependencies]
via-protocol = { path = "../via-protocol" }
eframe = "0.34.2"
egui = "0.34.2"
hidapi = "2.6.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
dirs = "6.0.0"

[lints]
workspace = true
